<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/mainNavDrawGrp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mainNavDrawProfile"
            android:title="@string/profile"/>
        <item
            android:id="@+id/mainNavDrawFollowers"
            android:title="@string/followers"/>
        <item
            android:id="@+id/mainNavDrawUserList"
            android:title="@string/users"/>
    </group>
    <group
        android:id="@+id/mainNavDrawGrp2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/mainNavDrawSettings"
            android:icon="@drawable/ic_baseline_settings"
            android:title="@string/settings"/>

    </group>
</menu>