<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity">


    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@mipmap/ic_launcher"
        android:contentDescription="@string/desc_logo_of_the_app"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/welcome_to_begreen"
        android:textSize="20sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/signInGoogleLayout"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/gray_four_corner_round"
        android:gravity="center">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_google"
            android:contentDescription="@string/desc_of_google_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:gravity="center"
            android:text="@string/sign_in_with_google"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>




</androidx.appcompat.widget.LinearLayoutCompat>