<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ContestCreationFragment">

    <TextView
        android:id="@+id/contest_creation_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_a_contest"
        android:gravity="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingTop="25dp"
        android:paddingBottom="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/contest_creation_title_container"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="12dp"
            android:layout_marginHorizontal="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contest_creation_title"
                android:maxLength="40"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contest_title" />
            <CheckBox
                android:id="@+id/private_contest_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:text="@string/private_contest" />
        </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_chevron_down"/>
        <TextView
            android:id="@+id/location_contest_creation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:layout_marginStart="20dp"
            android:text="@string/location"
            android:textSize="24sp"
            android:textStyle="bold"/>
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="right"
            android:layout_marginEnd="40dp"
            android:layout_weight="0.2"
            android:src="@drawable/ic_map"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contest_location_details_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/firt_line_contest_location_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="5dp"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintBottom_toTopOf="@+id/contest_creation_city_container"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city_contest_creation"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:hint="@string/city"
                    android:maxLength="15"
                    android:textSize="11sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintBottom_toTopOf="@+id/contest_creation_potal_code_container"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/postal_code_contest_creation"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:hint="@string/postal_code"
                    android:maxLength="6"
                    android:textSize="11sp" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@id/second_line_contest_location_details_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.hbb20.CountryPickerView
                android:id="@+id/countryPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </LinearLayout>

    </LinearLayout>



</LinearLayout>